--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "expo": "^19.0.0",
+    "firebase": "^4.2.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.1",
-    "react-native-maps": "^0.15.3"
+    "react-native-maps": "^0.15.3",
+    "react-native-router-flux": "^4.0.0-beta.14"
   }
 }
