dist and dir buttons will show circle and line

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,8 @@
       "react/sort-comp": "off",
       "no-lone-blocks": "off",
       "operator-assignment": "off",
-      "block-spacing": "off"
+      "block-spacing": "off",
+      "no-unused-vars": "off"
+
     }
 }
