--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.1",
     "react-native-maps": "^0.15.3",
+    "react-native-modal-picker": "0.0.16",
+    "react-native-modal-selector": "0.0.18",
     "react-native-router-flux": "^4.0.0-beta.14"
   }
 }
