--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,6 @@
       "no-lone-blocks": "off",
       "operator-assignment": "off",
       "block-spacing": "off",
-
+      "max-len": "off",
     }
 }
