delete button/some fixes

--- a/app.json
+++ b/app.json
@@ -1,6 +1,17 @@
 {
   "expo": {
-    "sdkVersion": "19.0.0",
-    "orientation" : "portrait",
+   "name": "heis",
+   "icon": "./src/images/heistexticon.png",
+   "version": "0.0.1",
+   "slug": "heis_v1_pub",
+   "sdkVersion": "19.0.0",
+   "orientation" : "portrait",
+   "primaryColor" : "#353160",
+   "ios": {
+     "bundleIdentifier": "com.heisio.heis"
+   },
+   "android": {
+     "package": "com.heisio.heis"
+   }
   }
 }
